# google_ap2

./: .gitignore  Dockerfile  README.md  commit.yml  docker-compose.yml  pyproject.toml
cli/: start_credentials_provider_agent.sh  start_merchant_agent.sh  start_merchant_payment_processor_agent.sh  start_shopping_agent.sh  watch_credentials_provider_agent.sh  watch_merchant_agent.sh  watch_merchant_payment_processor_agent.sh
src/common/: __init__.py  a2a_extension_utils.py  a2a_message_builder.py  artifact_utils.py  base_server_executor.py  function_call_resolver.py  message_utils.py  payment_remote_a2a_client.py  retrying_llm_agent.py  server.py  system_utils.py  validation.py  watch_log.py
src/inc/: func_utilities.py
src/roles/credentials_provider_agent/: __main__.py  account_manager.py  agent.json  agent_executor.py  tools.py
src/roles/merchant_agent/: __main__.py  agent.json  agent_executor.py  storage.py  tools.py
src/roles/merchant_agent/sub_agents/: catalog_agent.py
src/roles/merchant_payment_processor_agent/: __main__.py  agent.json  agent_executor.py  tools.py
src/roles/shopping_agent/: __init__.py  agent.py  remote_agents.py  tools.py
src/roles/shopping_agent/subagents/payment_method_collector/: __init__.py  agent.py  tools.py
src/roles/shopping_agent/subagents/shipping_address_collector/: __init__.py  agent.py  tools.py
src/roles/shopping_agent/subagents/shopper/: __init__.py  agent.py  tools.py
