# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ap2"
version = "0.1"
description = "Google Agent Payments Protocol"
dependencies = [
  "pydantic",
  "a2a-sdk",
  "absl-py",
  "flask",
  "flask-cors",
  "google-adk",
  "google-genai",
  "httpx",
  "requests",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]